# EpiScale_Signal

./: CMakeLists.txt  EpiScale_run.sh  EpiScale_run2.sh  README.txt  SBATCH.sh  build_EpiScale_Signal.sh  detect_vertices.m  find_inner_quad.m  find_inner_tri.m  main.m  main_signaling.m  polyperi.m  sort_counterclock.m  sort_tsp.m  test_matlab.sh  tri_skewness.m  tsp_ga.m
CMakeFiles_old/3.11.1/CompilerIdCUDA/tmp/: CMakeCUDACompilerId.cudafe1.cpp
CMakeFiles_old/CMakeTmp/: CMakeLists.txt
resources/: disc_M.cfg
src/common/: CMakeLists.txt  commonData.h
src/main/: CMakeLists.txt  discMain_M.cu
src/srcCPU/: CMakeLists.txt  Cell.cpp  CellInitHelper.cpp  CellInitHelper.h  Mesh.cpp  MeshGen.cpp  MeshGen.h  Signal2D.cpp  Signal_Calculator.cpp  Signal_Calculator.h  Tissue.cpp  common.cpp
src/srcGPU/: CMakeLists.txt  SceCells.cu  SceCells.h  SceNodes.cu  SceNodes.h  Structures_Misc.h
tst/: CMakeLists.txt
tst/perfTest/: CMakeLists.txt
tst/unitTest/: CMakeLists.txt
