cmake_minimum_required(VERSION 3.11.1.0)
project(CMAKE_TRY_COMPILE CUDA)
set(CMAKE_VERBOSE_MAKEFILE 1)
set(CMAKE_CUDA_FLAGS "")
set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} ${COMPILE_DEFINITIONS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${EXE_LINKER_FLAGS}")
include_directories(${INCLUDE_DIRECTORIES})
set(CMAKE_SUPPRESS_REGENERATION 1)
link_directories(${LINK_DIRECTORIES})
cmake_policy(SET CMP0065 OLD)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "/rhome/brittons/EpiScale_Signal/CMakeFiles/CMakeTmp")
add_executable(cmTC_1b1ef "/bigdata/operations/pkgadmin/opt/linux/centos/7.x/x86_64/pkgs/cmake/3.11.1/share/cmake-3.11/Modules/CMakeCUDACompilerABI.cu")
target_link_libraries(cmTC_1b1ef ${LINK_LIBRARIES})
